# WeChatOfficialAccountAutomationSystem

./: .gitignore  README.md  config.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: articles.py  collector.py  health.py  pipeline.py  plugins.py  router.py  scorer.py  style.py
backend/app/collector/: extractor.py  judge.py  scanner.py
backend/app/core/: config.py  database.py  notifications.py
backend/app/models/: __init__.py  article.py  key_point.py  revision_history.py  session.py  style_profile.py
backend/app/pipeline/: orchestrator.py  stages.py
backend/app/scorer/: ai_scorer.py  engine.py  rules.py
backend/app/style_engine/: analyzer.py  learner.py  profile.py
backend/plugins/: base.py  registry.py
backend/plugins/ai_models/: mock_ai.py
backend/plugins/formatters/: wechat_formatter.py
backend/plugins/publishers/: wechat.py
backend/static/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
tests/: conftest.py  test_api_articles.py  test_api_collector.py  test_api_health.py  test_api_pipeline.py  test_api_plugins.py  test_api_scorer.py  test_api_style.py  test_collector_extractor.py  test_collector_judge.py  test_collector_scanner.py  test_config.py  test_database.py  test_mock_ai.py  test_models.py  test_notifications.py  test_pipeline_orchestrator.py  test_plugin_base.py  test_plugin_registry.py  test_scorer_engine.py  test_scorer_rules.py  test_style_learner.py  test_style_profile_manager.py  test_wechat_formatter.py  test_wechat_publisher.py
(+45 files in other folders)
